test/src/test/resources/ParserInput.scala


object ParserInput {
  /**
   * scaladoc
   */
  def scalaStuff: String = "ASD" //error

  def method = {
    val x = 3 //error

    x
  }
}